# Conform.ai_test

./: .gitignore  README.md  package-lock.json
backend/: .env  conform.db  pyproject.toml  server.js  server.py
backend/ai_pipeline/: doc_processing.py  molmo.py  pdf_parse.py  prompts.py
frontend/: index.html
frontend/src/: App.css  App.jsx
frontend/src/components/: Carousel.css  Dashboard.css  Dashboard.jsx  EditProfile.css  EditProfile.jsx  FormEditor.jsx  Login.css  Login.jsx  Sidebar.css  Sidebar.jsx  SignUp.css  SignUp.jsx
medical-forms-landing-page/src/: App.css
