[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.3.19",
    "langchain-google-vertexai>=2.0.15",
    "langchain-google>=0.1.1",
    "langchain[openai]>=0.3.20",
    "pypdf>=5.3.1",
    "pillow>=11.1.0",
    "pdf2image>=1.17.0",
    "opencv-python>=4.11.0.86",
    "transformers>=4.49.0",
    "accelerate>=1.5.1",
    "matplotlib>=3.10.1",
    "einops>=0.8.1",
    "torchvision>=0.21.0",
]
